--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,23 @@
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
+  height: 100%;
   text-align: center;
+}
+
+.app {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh; /* ocupa toda la altura de la pantalla */
+}
+
+.main-content {
+  flex:1;
+  padding-bottom: 40px; 
+}
+
+footer {
+  flex-shrink: 0;
 }
 
 .logo {
