--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,6 +1,6 @@
 /* Aplica estilo al contenedor principal del navbar */
 .custom-navbar {
-  background-color: #1f1f2e;
+  background-color: #0a0a23 !important;
   color: white;
   height: 80px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
@@ -65,4 +65,21 @@
 
 .navbar-toggler-icon {
   filter: invert(1);
+}
+
+.navbar-collapse {
+  background-color: #0a0a23; /* o el color de tu navbar */
+  padding: 1rem;
+  z-index: 1001;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+  transition: background-color 0.3s ease;
+}
+
+@media (max-width: 991.98px) {
+  .navbar-collapse {
+    position: absolute;
+    top: 80px; /* altura de tu navbar */
+    left: 0;
+    width: 100%;
+  }
 }
