--- a/src/components/Features.css
+++ b/src/components/Features.css
@@ -1,6 +1,6 @@
 
 .features {
-padding: 80px 0;
+padding: 80px 0 80px;
 background-color: var(--color-fondo);
 color: var(--color-texto);
 }
@@ -10,8 +10,10 @@ color: var(--color-texto);
     border: none;
     background: linear-gradient(145deg, #1f1f2e, #29293a);
     color: white;
-    min-height: 300px;
+    min-height: 330px;
+    max-height: 370px;
     min-width: 100px;
+    max-width: 800px;
     transition: transform 0.3s ease;
     border-left: 4px solid #60a5fa;
 }
@@ -28,11 +30,13 @@ word-break: keep-all;
 white-space: normal;
 hyphens: auto;
 color: whitesmoke;
+padding-top: 10%;
 
 }
 
 .feature-card .card-text {
-font-size: 1rem;
+font-size: 1.1rem;
+padding-top: 10%;
 color: whitesmoke; 
 }
 
