--- a/src/components/Features.css
+++ b/src/components/Features.css
@@ -1,6 +1,6 @@
 
 .features {
-padding: 80px 0 80px;
+padding: 80px 80px 80px;
 background-color: var(--color-fondo);
 color: var(--color-texto);
 }
@@ -10,8 +10,8 @@ color: var(--color-texto);
     border: none;
     background: linear-gradient(145deg, #1f1f2e, #29293a);
     color: white;
-    min-height: 330px;
-    max-height: 370px;
+    min-height: 500px;
+    max-height: 550px;
     min-width: 100px;
     max-width: 800px;
     transition: transform 0.3s ease;
